--- a/src/styles/preview.module.css
+++ b/src/styles/preview.module.css
@@ -1,29 +1,27 @@
 
 
-.preview h1 {
+.body h1 {
     font-weight: 700;
-    text-align: center;
     font-size: larger
 }
 
-.preview h2 {
+.body h2 {
     font-weight: 500;
-    text-align: center;
     font-size: large
 }
 
-.preview h3 {
+.body h3 {
     font-size: medium;
 }
 
-.preview h4 {
+.body h4 {
     font-size: small;
 }
 
-.preview h5 {
+.body h5 {
     font-size:x-small;
 }
 
-.preview h6 {
+.body h6 {
     font-size: xx-small;
 }
